# punto4_SO

./: CMakeCache.txt  CMakeLists.txt  Makefile  Punto4SO  README.md  cmake_install.cmake
include/: execution.h  memory.h  process.h  scheduler.h
src/: execution.cpp  main.cpp  memory.cpp  process.cpp  scheduler.cpp
